uploaded image to s3 aws

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ PORT=5000
 MONGODB_URL=mongodb://localhost:27017/ecomm
 JWT_SECRET=yoursecret
 JWT_EXPIRY=7d
+
+S3_ACCESS_KEY=youraccesskey
+S3_SECRET_ACCESS_KEY=yoursecretaccesskey
+S3_BUCKET_NAME=yourbucketname
+S3_REGION=yourregion
