--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "hitesh",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1359.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
