--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
   }
