mail and forgot password implementation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ S3_ACCESS_KEY=youraccesskey
 S3_SECRET_ACCESS_KEY=yoursecretaccesskey
 S3_BUCKET_NAME=yourbucketname
 S3_REGION=yourregion
+
+SMTP_MAIL_HOST=smtp.mailtrap.io
+SMTP_MAIL_PORT=2525
+SMTP_MAIL_USERNAME=yourusername
+SMTP_MAIL_PASSWORD=yourpassword
+SMTP_SENDER_EMAIL=some@mailtrap.com
