sums up the backend with tasks

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ SMTP_MAIL_PORT=2525
 SMTP_MAIL_USERNAME=yourusername
 SMTP_MAIL_PASSWORD=yourpassword
 SMTP_SENDER_EMAIL=some@mailtrap.com
+
+
+RAZORPAY_KEY_ID=yourkeyid
+RAZORPAY_SECRET=yoursecret
