--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "razorpay": "^2.8.6"
   }
 }
